Adding validation and error handling Also documenting it in swagger
