# src/controllers/contactsController.js
@@ -1,7 +1,14 @@
 const mongodb = require("../database/connect");
 const ObjectId = require("mongodb").ObjectId;
+const { contactSchema } = require("./../validation/contactSchema");
+const Api400Error = require("../error-handling/api400Error");
+const Api404Error = require("../error-handling/api404Error");
 
-const getAll = async (req, res) => {
+const getAll = async (req, res, next) => {
+  /*
+  #swagger.tags = ['Contacts']
+  #swagger.description = 'Get all contacts'
+  */
   const result = await mongodb.getDatabase().collection("Contacts").find({});
   result
     .toArray()
@@ -9,92 +16,121 @@ const getAll = async (req, res) => {
       res.setHeader("Content-Type", "application/json");
       res.status(200).json(contacts);
     })
-    .catch(() => {
-      res.setHeader("Content-Type", "application/json");
-      res.status(500).json({ error: "Failed to retrieve contacts" });
+    .catch((err) => {
+      next(err);
     });
 };
-const getById = async (req, res) => {
-  const contactId = new ObjectId(req.params.id);
-  const result = await mongodb
-    .getDatabase()
-    .collection("Contacts")
-    .find({ _id: contactId });
-  result
-    .toArray()
-    .then((contacts) => {
-      res.setHeader("Content-Type", "application/json");
-      res.status(200).json(contacts[0]);
-    })
-    .catch(() => {
-      res.setHeader("Content-Type", "application/json");
-      res.status(500).json({ error: "Failed to retrieve contacts" });
-    });
-};
-
-const createContact = async (req, res) => {
-  /* 
-    #swagger.tags = ['Contacts']
-    #swagger.description = 'Create a new contact'
-    #swagger.parameters['body'] = {
-      in: 'body',
-      description: 'Contact information',
-      required: true,
-      schema: { $ref: '#/definitions/Contact' }
-    }
+const getById = async (req, res, next) => {
+  /*
+  #swagger.tags = ['Contacts']
+  #swagger.description = 'Get a contact by id'
   */
-  console.log("Creating contact with data:", req.body);
-  const newContact = req.body;
-  const result = await mongodb
-    .getDatabase()
-    .collection("Contacts")
-    .insertOne(newContact);
-  if (result.acknowledged) {
+  try {
+    const contactId = new ObjectId(req.params.id);
+    const result = await mongodb
+      .getDatabase()
+      .collection("Contacts")
+      .find({ _id: contactId });
+
+    const contacts = await result.toArray();
+
+    if (contacts.length === 0) {
+      throw new Api404Error("Contact not found");
+    }
     res.setHeader("Content-Type", "application/json");
-    res.status(201).json(result.insertedId);
-  } else {
-    res.setHeader("Content-Type", "application/json");
-    res.status(500).json({ error: "Failed to create contact" });
+    res.status(200).json(contacts[0]);
+  } catch (err) {
+    next(err);
   }
 };
 
-const updateContact = async (req, res) => {
+const createContact = async (req, res, next) => {
   /* 
-    #swagger.tags = ['Contacts']
-    #swagger.description = 'Create a new contact'
-    #swagger.parameters['body'] = {
-      in: 'body',
-      description: 'Contact information',
-      required: true,
-      schema: { $ref: '#/definitions/Contact' }
-    }
+  #swagger.tags = ['Contacts']
+  #swagger.description = 'Create a new contact'
+  #swagger.parameters['body'] = {
+    in: 'body',
+    description: 'Contact information',
+    required: true,
+    schema: { $ref: '#/definitions/Contact' }
+  }
   */
-  const contactId = new ObjectId(req.params.id);
-  const updatedContact = req.body;
-  const result = await mongodb
-    .getDatabase()
-    .collection("Contacts")
-    .updateOne({ _id: contactId }, { $set: updatedContact });
-  if (result.modifiedCount > 0) {
-    res.setHeader("Content-Type", "application/json");
-    res.status(200).json({ message: "Contact updated successfully" });
-  } else {
-    res.setHeader("Content-Type", "application/json");
-    res.status(500).json({ error: "Failed to update contact" });
+  try {
+    console.log("Creating contact with data:", req.body);
+    const validateResult = await contactSchema.validateAsync(req.body);
+    const result = await mongodb
+      .getDatabase()
+      .collection("Contacts")
+      .insertOne(validateResult);
+
+    if (result.acknowledged) {
+      res.setHeader("Content-Type", "application/json");
+      res.status(201).json(result.insertedId);
+    } else {
+      throw new Api404Error("Failed to create contact");
+    }
+  } catch (err) {
+    if (err.isJoi) {
+      next(new Api400Error(err.message));
+    } else {
+      next(err);
+    }
   }
 };
-const deleteContact = async (req, res) => {
-  const contactId = new ObjectId(req.params.id);
-  const result = await mongodb
-    .getDatabase()
-    .collection("Contacts")
-    .deleteOne({ _id: contactId });
-  if (result.deletedCount > 0) {
-    res.setHeader("Content-Type", "application/json");
-    res.status(200).json({ message: "Contact deleted successfully" });
-  } else {
-    res.setHeader("Content-Type", "application/json");
-    res.status(500).json({ error: "Failed to delete contact" });
+
+const updateContact = async (req, res, next) => {
+  /* 
+  #swagger.tags = ['Contacts']
+  #swagger.description = 'Update a contact by id'
+  #swagger.parameters['body'] = {
+    in: 'body',
+    description: 'Contact information',
+    required: true,
+    schema: { $ref: '#/definitions/Contact' }
+  }
+  */
+  try {
+    const contactId = new ObjectId(req.params.id);
+    const validateResult = await contactSchema.validateAsync(req.body);
+    const result = await mongodb
+      .getDatabase()
+      .collection("Contacts")
+      .updateOne({ _id: contactId }, { $set: validateResult });
+    if (result.modifiedCount > 0) {
+      res.setHeader("Content-Type", "application/json");
+      res.status(200).json({ message: "Contact updated successfully" });
+    } else if (result.matchedCount === 0) {
+      throw new Api404Error("Contact not found");
+    } else {
+      throw new Api400Error("No changes made to contact, bad request");
+    }
+  } catch (err) {
+    if (err.isJoi) {
+      next(new Api400Error(err.message));
+    } else {
+      next(err);
+    }
+  }
+};
+const deleteContact = async (req, res, next) => {
+  /*
+  #swagger.tags = ['Contacts']
+  #swagger.description = 'Delete a contact by id'
+  */
+  try {
+    const contactId = new ObjectId(req.params.id);
+    const result = await mongodb
+      .getDatabase()
+      .collection("Contacts")
+      .deleteOne({ _id: contactId });
+    if (result.deletedCount > 0) {
+      res.setHeader("Content-Type", "application/json");
+      res.status(200).json({ message: "Contact deleted successfully" });
+    } else {
+      throw new Api404Error("Contact not found");
+    }
+  } catch (err) {
+    next(err);
   }
 };
 
